# katoolin-lite-2025

./: README.md  pyproject.toml
src/katoolin_lite/: __init__.py  apt.py  catalog.py  cli.py
