[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "katoolin-lite"
version = "0.1.0"
description = "Lightweight Katoolin-inspired CLI for managing Kali tools on Ubuntu"
authors = [{name = "Katoolin Maintainers"}]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
]

[project.scripts]
katoolin-lite = "katoolin_lite.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
